codelabs/lab10-mega/8-gke/clust-eu1/apps/1-php/manifests/php-dpl-cnry.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: php-dpl-cnry
  labels:
    app: phpapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpapp
  template:
    metadata:
      labels:
        app: phpapp
        track: php-dpl
    spec:
      volumes:
      - name: istio-envoy
        emptyDir:
          medium: Memory
      - name: pod-info
        downwardAPI:
          items:
            - path: "name"
              fieldRef:
                fieldPath: metadata.name
            - path: "namespace"
              fieldRef:
                fieldPath: metadata.namespace
            - path: "uid"
              fieldRef:
                fieldPath: metadata.uid
            - path: "labels"
              fieldRef:
                fieldPath: metadata.labels
            - path: "annotations"
              fieldRef:
                fieldPath: metadata.annotations
      containers:
      - image: phpapp2
        name: phpcontainer
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
        - name: pod-info
          mountPath: /etc/podinfo
          readOnly: false
      dnsPolicy: ClusterFirst
