codelabs/lab10-mega/8-gke/clust-eu1/apps/1-php/manifests/td-busybox.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: td-busybox
  labels:
    run: client
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: client
    spec:
      containers:
      - image: busybox
        name: busybox
        command:
          - sleep
          - "3600"
      - image: docker.io/istio/proxyv2:1.2.4
        imagePullPolicy: IfNotPresent
        name: istio-proxy
        ports:
        - containerPort: 15090
          name: http-envoy-prom
          protocol: TCP
        args:
        - proxy
        - sidecar
        - --domain
        - $(POD_NAMESPACE).svc.cluster.local
        - --configPath
        - /etc/istio/proxy
        - --binaryPath
        - /usr/local/bin/envoy
        - --serviceCluster
        - $(POD_NAMESPACE)
        - --drainDuration
        - 45s
        - --parentShutdownDuration
        - 1m0s
        - --discoveryAddress
        - trafficdirector.googleapis.com:443
        - --proxyLogLevel
        - info
        - --connectTimeout
        - 10s
        - --proxyAdminPort
        - "15000"
        - --concurrency
        - "2"
        - --statusPort
        - "15020"
        resources:
          limits:
            cpu: "2"
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          readOnlyRootFilesystem: true
          runAsUser: 1337
        volumeMounts:
        - mountPath: /etc/istio/proxy
          name: istio-envoy
      volumes:
      - emptyDir:
          medium: Memory
        name: istio-envoy
