codelabs/lab10-mega/8-gke/clust-eu1/apps/1-php/manifests/php-neg-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-neg-svc
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  selector:
    app: phpapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: php-neg-ingress
spec:
  backend:
    serviceName: php-neg-svc
    servicePort: 80
